--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       name="description"
       content="Sistema React criado para o curso DEVInHouse"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,700;1,300&display=swap"
+      rel="stylesheet"
+    />
     <title>DevsInDEV</title>
   </head>
   <body>
